*muttvcardsearch-1.10 (20 Jan 2017)

  20 Jan 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +muttvcardsearch-1.10.ebuild, metadata.xml:
  app-misc/muttvcardsearch: version bump

*muttvcardsearch-1.9 (14 Nov 2014)

  14 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +metadata.xml, +muttvcardsearch-1.9.ebuild:
  app-misc/muttvcardsearch: new ebuild