@@ -2,22 +2,21 @@
 Hash: SHA256
 
 DIST muttvcardsearch-1.10.tar.gz 26298 SHA256 6014e4ccef00bd329cc9cfe8c8a94f9ecdb5167883bde4577816fcdfcd104f17 SHA512 bc4240616790d1bf8140bff290a61148c0cbee63358ee22b346320987c715c64a57998bd820e898bb21008f711fa90fc4d6c65b0cf12e7b088591da12dc39d3b WHIRLPOOL eef9710c154d3ef357320ec41c95dc2916eaab3d150a63c349c0cf57b92ae3c76daeea63df8f599fc5f8d68961a148051e4a2073eccfeb199e5542deb14d5c93
-DIST muttvcardsearch-1.9.tar.gz 26132 SHA256 4c099938dd02f577d8289bbc5e82f0af6f290a564a30f6fdcb5cc880cd02fc8d SHA512 b9247f84a0a21ff3dfcbdade9a9946949a414a1f88584f52cb51bf9be1f12042b3a2275d0f6fc4cf7a3c0dd09f0839f145859300d64cac0e8181a1ea9a1dc7d1 WHIRLPOOL 6460be7024460f36cf590feb20bb4011b58bbec13da3237bf4b19f52e6a3d45ee1b8f852c02ae7ff2a606381092792cdadeab8a4bb18110e28925c0236360759
 -----BEGIN PGP SIGNATURE-----
 
-iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAliB5VdfFIAAAAAALgAo
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAliB5XVfFIAAAAAALgAo
 aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
 QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
-Hn2aFhAA1UhW9lCc7jo1doESVAESdzFZTnVr/3VgVQ9s/O8q+K93IurBYveRFF8G
-VAaS1/8J+UoPzkTTjclCoZm29CV7kh/55VuEl5oPriwe7BeqVCP5k5o/OLKstv9P
-SaRG8H4KUDAU8NHP92ycLhRjaLvnXeWqlbA+z1R3nYsylReFbT33ZrgbMq4MHvBL
-Bj9yYe/YO2pbMrRtt0PDxWR5ritTLglcBhiJQCAvVeUoMU6y8VbIKPe+9pgBFiCW
-o7S9zzJLzCq8+f9K0ZQRmnhFeeWNkCnMWqGo20imrGuZ2rnozl6KSyWV4B53P/Qm
-M48foQYPZpYqHPd9WHARtm88YV5fXLsNqeZUkBjEN18xI9q39KQ7ldpbGFkVKg6j
-QivW8vk+sFeeV60yanlEtRtA9I9AajeugIFHXiPpxiJsOCoOanGgLZZ1E50VdEek
-rWD/g2XSjUolNIRc7tPXVlnLcmzHgrzHxtQn5EK6ncvmSCcHmCa3I3hf6nwfIzPY
-aAvUlCbbZJ3lI38ZYyejlYyE1JDFbJOhUaL1E700cU79AxYtn3gkZSfjJ9d8Qrp1
-IqLdeyS/ujuKKLoUWWqb30Ify//oYx5skpl2tQclsj7dr7CuQiIhnwYsiKm7sIEY
-hZrTd6Y5C4m2NYwV2ngE66u6hD16iF0YJU7FV0Cx7k9Gzg7mZdo=
-=wnxU
+Hn3avhAAynhyBMUXfNbe8Thcyx4fXg8d6g/bPV0zjK7n1G4vexy1dsON7H+uf3Te
+JOPP/E+D7OTIFYbIugyRJzFBa+XXA0lJT//mQ6SgVvHhvJj6kbHT0aBziTDbW/Dl
+Ct9++agh+CN1TzFFjHYvJ7dXI7iVFM618S2wbyYmBGYrQT0GHC+K3Jgp/hOEGXs9
+k/PAUEU6JDUT9sauJyRLveNt/1yYwaWWSw9V+Gnn9Umk2qPb+WRv2cUd9COwTtUK
+hM73SqeLpTtTjJokunQg+e7SbUYU7Ux6hYo3rchYRiFpUIscpiWLajx60OPaL4fp
+flqrIc/NCWxyz+oQTIAe4MiuwQiCsxbrFoyctVtM16P0s7J3EL+32B9uHZXl34SL
+46Ebu9mdDAEhc6TM2cxP+TtkUJT1Fq+dkrHtGPUrRW3h+WsrmhB6g4zt73y1Bp9y
+a1d/YmeVANXDUNwA9z3a4w4kmCgDP1l+xSiE5r2c2nx8xAT4e+d8qCYanes5lCwp
+uQLosrE7euzl5Ku65gQPYFjv5zlBS/iIahnFbtMW+hk/RNdYdOkgvZHxBFmy1n8V
+mYba2wfU1TpvY5WiADKat+BN9mZ8/2DUrCwN1hp4Goj6HJzzXPmcXO9YbnTjvuGS
+jm41Jv+aqr2tZy2jrSIXBP303mVKcT4taBfW44pRqgBPmJviBcE=
+=P1ol
 -----END PGP SIGNATURE-----
