@@ -1,3 +1,7 @@
+  20 Jan 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  -muttvcardsearch-1.9.ebuild:
+  app-misc/muttvcardsearch: drop old version
+
 *muttvcardsearch-1.10 (20 Jan 2017)
 
   20 Jan 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
